Fix paths for GitHub Pages deployment

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "one-html-page-challenge",
+  "name": "task_11",
   "version": "1.0.0",
   "description": "Example for One HTML Page Challenge",
   "scripts": {
