--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,8 @@ jobs:
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
-
+        with:
+          token: ${{ secrets.ACCESS_TOKEN }}
       - name: Update data file 2
         run: |
          sed -i 's@<p id="myname"></p>@<p id="myname">${{ vars.MY_NAME }}</p>@g' index.html      
