--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,26 +1,12 @@
 name: Deploy to GitHub Pages
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# Allow one concurrent deployment
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
-
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -37,18 +23,9 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Update HTML file
-        run: sed -i 's@<a href="index.html">@<a href="/task_11/index.html">@g' index.html
-
-      - name: Update data file 2
-        run: |
-         sed -i 's@<p id="myname"></p>@<p id="myname">${{ vars.MY_NAME }}</p>@g' index.html      
-         cat index.html
-
       - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v3
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          BRANCH: gh-pages
-          FOLDER: .
+          github_token: ${{ secrets.ACCESS_TOKEN }}
+          publish_dir: ./
+          enable_jekyll: false
